# langchain

./: .env.sample  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: jobs.json  jobs.txt
src/chat/basic/: 1.openai.py  3.prompt-template.py  local-llm.py
src/chat/basic/chain/: 1.simple-chain.py  3.chat-history.py  chat-history.py  simple-sequential-chain.py
src/embedding/: 1.simple.py  similarity-score.py
src/rag/: 1.job-search.py  2.job-search-history-aware.py  job-search-history-aware-raw.py
src/search/: 1.job-search-by-text.py  2.job-search-by-json.py
src/semantic-search/: job-search-by-json.py
